// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card CardGenerator validate function getNavigationPropertyInfoFromEntity 1`] = `
[
  {
    "name": "to_BillingStatus",
    "properties": [
      {
        "label": "Lower Value",
        "name": "Status",
        "type": "Edm.String",
      },
      {
        "label": "Confirmation",
        "name": "Status_Text",
        "type": "Edm.String",
      },
      {
        "label": "billingBlockUpdateTime",
        "name": "billingBlockUpdateTime",
        "type": "Edm.DateTime",
      },
    ],
  },
]
`;

exports[`Card CardGenerator validate function getPropertyInfoFromEntity 1`] = `
[
  {
    "UOM": "",
    "isDate": false,
    "kind": "Property",
    "label": "node_key",
    "name": "node_key",
    "type": "Edm.Guid",
  },
  {
    "UOM": "",
    "isDate": false,
    "kind": "Property",
    "label": "IsActiveEntity",
    "name": "IsActiveEntity",
    "type": "Edm.Boolean",
  },
  {
    "UOM": "",
    "isDate": false,
    "kind": "Property",
    "label": "ProductForEdit",
    "name": "ProductForEdit",
    "type": "Edm.String",
  },
  {
    "UOM": "",
    "isDate": true,
    "kind": "Property",
    "label": "billingBlockUpdateTime",
    "name": "billingBlockUpdateTime",
    "type": "Edm.DateTime",
  },
]
`;

exports[`Card CardGenerator validate function getPropertyInfoFromEntity with navigation 1`] = `
[
  {
    "UOM": "",
    "category": "Select a Property:",
    "isDate": false,
    "kind": "Property",
    "label": "node_key",
    "name": "node_key",
    "type": "Edm.Guid",
  },
  {
    "UOM": "",
    "category": "Select a Property:",
    "isDate": false,
    "kind": "Property",
    "label": "IsActiveEntity",
    "name": "IsActiveEntity",
    "type": "Edm.Boolean",
  },
  {
    "UOM": "",
    "category": "Select a Property:",
    "isDate": false,
    "kind": "Property",
    "label": "ProductForEdit",
    "name": "ProductForEdit",
    "type": "Edm.String",
  },
  {
    "UOM": "",
    "category": "Select a Property:",
    "isDate": true,
    "kind": "Property",
    "label": "billingBlockUpdateTime",
    "name": "billingBlockUpdateTime",
    "type": "Edm.DateTime",
  },
  {
    "UOM": "",
    "category": "Select a Navigational Property:",
    "isDate": false,
    "kind": "NavigationProperty",
    "label": "to_BillingStatus",
    "name": "to_BillingStatus",
    "type": undefined,
  },
]
`;

exports[`Card CardGenerator validate function getPropertyReference 1`] = `
[
  {
    "UOM": "",
    "isDate": false,
    "kind": "Property",
    "label": "node_key",
    "name": "node_key",
    "type": "Edm.Guid",
  },
  {
    "UOM": "",
    "isDate": false,
    "kind": "Property",
    "label": "IsActiveEntity",
    "name": "IsActiveEntity",
    "type": "Edm.Boolean",
  },
]
`;
